# BirdNET-Analyzer

./: .gitignore  .replit  README.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
artifacts/api-server/: package.json
artifacts/api-server/src/routes/: birdnet.ts  history.ts  index.ts
artifacts/birdnet-app/: index.html  package.json  vite.config.ts
artifacts/birdnet-app/.replit-artifact/: artifact.toml
artifacts/birdnet-app/src/: App.tsx  index.css
artifacts/birdnet-app/src/components/: cursor.tsx  file-upload.tsx  layout.tsx
artifacts/birdnet-app/src/context/: analysis.tsx  auth.tsx
artifacts/birdnet-app/src/hooks/: use-wikipedia.ts
artifacts/birdnet-app/src/pages/: home.tsx  login.tsx  stats.tsx
artifacts/birdnet-app/src/pages/history/: detail.tsx  index.tsx
birdnet-api/: analyzer.py  app.py  requirements.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts
scripts/: dev-launcher.mjs
