[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "birdnetlib>=0.18.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.3.0",
    "librosa>=0.11.0",
    "numba>=0.65.0",
    "resampy>=0.4.3",
    "soundfile>=0.13.1",
    "tensorflow-cpu>=2.21.0",
    "werkzeug>=3.1.8",
]
